assets/sass/partials/_layout.scss
// LAYOUT

body {
  background-color: $bg-color;
}

article {
  clear: both;
}

.date, .teaser, .event-details-container, .full-description, .festival-name, .festival-description { 
  background: $white; 
  margin-bottom: 2px;
  padding: $padding; 
}

.date { 
  @include breakpoint($bp-small-desktop) {
    @include span(6); 
  }

  @include breakpoint($bp-desktop) {
    @include span(4); 
  }

  color: $secondary-highlight;
  padding: $padding/2 $padding; 
}

article header {
  margin-bottom: 2px;
  clear: both;

  .event-name {
    @include breakpoint($bp-small-desktop) {
      @include span(8);
    }

    @include breakpoint($bp-desktop) {
      @include span(7);
    }

    background: $white;
    padding: $padding; 
  }

  .ticket-box {
    @include breakpoint($bp-mobile-max) {
      max-height: none !important; // override max-height set on ticket-box to match header for desktop view
    }

    @include breakpoint($bp-small-desktop) {
      @include span(4 last);
    }

    @include breakpoint($bp-desktop) {
      @include span(3);
    }

    background: $light-grey;
    padding: 0; 

    .ticket-option:first-child { 
      border-bottom: 2px solid $bg-color;
    }

    .ticket-option {
      padding: $padding/2 $padding $padding;
    }

    a.book-now-btn {
      max-width: 100%;

      @include breakpoint($bp-mobile) {
        max-width: 50%;
      }

      @include breakpoint($bp-small-desktop) {
        max-width: 100%;
      }
    }
  }
}

.teaser {
  @include breakpoint($bp-small-desktop) {
    @include span(7);
  }

  clear: both;
  position: relative;
}

.featured-img { 
  @include breakpoint($bp-small-desktop) {
    margin-top: -70px;
    @include span(8);
  }

  img { width: 100%; height: auto; }
}

.event-details-container {
  @include clearfix;

  @include breakpoint($bp-small-desktop) {
    @include span(9);
  }

  .event-details-content {
    @include breakpoint($bp-mobile) {
      @include span(5 of 9); 
    }

    padding-left: 20px;
  }

  .booking-information-content {
    padding-left: 20px;
    margin-top: $margin;

    @include breakpoint($bp-mobile) {
      @include span(4 of 9 last);
      padding-left: 0;
      margin-top: 0;
    }

  }

  padding: $padding 0;

  dt {
    @include span(33.333%);
    float:left;
    display:inline-block;
    clear:left;
  }

  dd {
    overflow:hidden;
    margin-right:$margin;
  }
}

.full-description {
  clear: both;
  margin: $margin 0;

  @include breakpoint($bp-small-desktop) {
    @include span(8);
  }

  p {
    margin: 0;
  }
}

.festival-name {
  clear: both;

  @include breakpoint($bp-small-desktop) {
    @include span(6);
  }

  padding: $padding/2 $padding;
}

.festival-description {
  @include clearfix;
  padding: $padding 0;
  clear: both;
  margin-bottom: 50px;

  @include breakpoint($bp-small-desktop) {
    @include span(10);
  }

  h2 {
    @include span(7 of 12);

    @include breakpoint($bp-small-desktop) {
      @include span(8 of 10);
    }

    padding-left: $padding;
  }

  .festival-logo {
    @include span(4 of 12 last);

    @include breakpoint($bp-small-desktop) {
      @include span(2 of 10 last);
    }
    
    padding-right: $padding;
  }
}

